[package]
name = "fontview"
version = "0.1.0"
edition = "2024"
description="fontview"

[dependencies]
eframe = "0.32.3"
egui_extras = {version="0.32.3",  features = ["default"] }

env_logger = {version="0.11.8",optional=true}
log = {version="0.4.28",optional=true}

rfd = "0.16.0"
allsorts = {version="0.16.1",path="./allsorts"}
encoding_rs = "0.8.35"
pico-args = "0.5.0"
rust-fontconfig = "1.2.1"

[profile.release]
opt-level = "z"  # 优化体积而非速度，可选 "s" 作为替代
lto = true       # 启用链接时优化，消除死代码
codegen-units = 1  # 减少并行代码生成单元，提高优化效果
panic = "abort"  # panic时直接终止，而非展开栈，减少标准库体积
strip = true     # 自动剥离符号表，减小体积

[features]
pkg=[]
print=["dep:log","dep:env_logger"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[build-dependencies]
reqwest = {version="0.12.26",features=["blocking"]}
sevenz-rust = "0.6.1"
zip = "6.0.0"


[package.metadata.bundle]
identifier="cn.inkroom.fontview"
icon = ["img/ico.png"]
resources=["img"]
